evaluation/kubernetes/apps/prose-system/jaeger/app/query-svc-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tracing
  labels:
    app: jaeger
spec:
  type: ClusterIP
  ports:
    - name: http-query
      port: 80
      protocol: TCP
      targetPort: 16686
    # Note: Change port name if you add '--query.grpc.tls.enabled=true'
    - name: grpc-query
      port: 16685
      protocol: TCP
      targetPort: 16685
  selector:
    app: jaeger
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-query
spec:
  ingressClassName: nginx
  rules:
    - host: &host "jaeger-query.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: tracing
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
